fixes bug 200365 "trunk topcrash [@ nsUnknownDecoder::SniffForImageMimeType]" r=dougt sr=bz